[gd_scene load_steps=2 format=3 uid="uid://cyg08wrgagqi8"]

[ext_resource type="Script" path="res://mob_spawn.gd" id="1_oxyf4"]

[node name="MobSpawn" type="Node2D"]
script = ExtResource("1_oxyf4")

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="StopTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
